--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ icon: logo.jpg # the emoji used as the favicon (alternatively, provide image nam
 url: https://thinkall.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: true # set to true if you want to display last updated in the footer
-impressum_path: /impressum/ # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
 
 # -----------------------------------------------------------------------------
@@ -112,7 +112,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Feel free to ping me on <a href="https://discord.com/users/{{discord_id}}" target="_blank">Discord</a>
+  Feel free to ping me on Discord or send me an email.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
