--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ discord_id: li_jiang # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
 github_username: thinkall # your GitHub user name
-gitlab_username: # your GitLab user name
+gitlab_username: thinkall # your GitLab user name
 ieee_id: # your ieeexplore.ieee.org/author/id
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
