--- a/_config.yml
+++ b/_config.yml
@@ -130,8 +130,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: thinkall # blog_name will be displayed in your blog page
-blog_description: thinkall's blog
+blog_name:  # blog_name will be displayed in your blog page
+blog_description: 
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
